force-app/main/default/objects/WorkOrder/fields/Valid_For_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Valid_For_FollowUp__c</fullName>
    <formula>NOT(Follow_Up_Created__c) &amp;&amp;  TEXT( StatusCategory ) = &apos;Completed&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid For FollowUp</label>
    <type>Checkbox</type>
</CustomField>