force-app/main/default/objects/WorkOrder/fields/Work_Order_Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Generation_Status__c</fullName>
    <label>Work Order Generation Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>