force-app/main/default/objects/WorkOrder/fields/Work_Order_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Number_Formula__c</fullName>
    <formula>WorkOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Citron Work Order #</label>
    <type>Text</type>
</CustomField>