force-app/main/default/objects/WorkOrder/recordTypes/QA_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>QA_Work_Order</fullName>
    <active>true</active>
    <label>QA Work Order</label>
</RecordType>