force-app/main/default/objects/WorkOrder/recordTypes/Regular_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Regular_Work_Order</fullName>
    <active>true</active>
    <label>Regular Work Order</label>
</RecordType>