force-app/main/default/objects/WorkOrder/listViews/Completed_Services.listView-meta.xml
<ListView>
    <fullName>Completed_Services</fullName>
    <columns>Account</columns>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Completed_Date__c</columns>
    <columns>Contact</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Services</label>
    <language>en_US</language>
</ListView>