force-app/main/default/objects/WorkOrder/listViews/Pest_Jobs_Exception_List.listView-meta.xml
<ListView>
    <fullName>Pest_Jobs_Exception_List</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>Pest Control</value>
    </filters>
    <filters>
        <field>Subject</field>
        <operation>notEqual</operation>
    </filters>
    <label>Pest Jobs Exception List</label>
    <language>en_US</language>
</ListView>