force-app/main/default/objects/WorkOrder/listViews/Pest_New_Status.listView-meta.xml
<ListView>
    <fullName>Pest_New_Status</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>Pest Control</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Subject</field>
        <operation>notEqual</operation>
    </filters>
    <label>Pest - New Status</label>
</ListView>