force-app/main/default/objects/WorkOrder/listViews/QA_Work_Order_Requests.listView-meta.xml
<ListView>
    <fullName>QA_Work_Order_Requests</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>QA_Requested_Date__c</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>FSL__VisitingHours__c</columns>
    <columns>Case</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QA_Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>QA Work Order Requests</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>