force-app/main/default/objects/WorkOrder/listViews/QA_Work_Orders_Completed.listView-meta.xml
<ListView>
    <fullName>QA_Work_Orders_Completed</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>QA_Score__c</columns>
    <columns>QA_Completed_Date__c</columns>
    <columns>FSL__VisitingHours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QA_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>QA Work Orders Completed</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>