force-app/main/default/objects/WorkOrder/listViews/Weekly_Cannot_Complete_Work_Orders.listView-meta.xml
<ListView>
    <fullName>Weekly_Cannot_Complete_Work_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Cannot_Complete_Reason__c</columns>
    <columns>Status</columns>
    <columns>Completed_Date__c</columns>
    <columns>Subject</columns>
    <columns>Priority</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Completed_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>StatusCategory</field>
        <operation>equals</operation>
        <value>6</value>
    </filters>
    <label>Weekly Cannot Complete Work Orders</label>
    <language>en_US</language>
</ListView>