force-app/main/default/objects/WorkOrder/listViews/Work_Orders_Can_not_Complete.listView-meta.xml
<ListView>
    <fullName>Work_Orders_Can_not_Complete</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Contact</columns>
    <columns>EndDate</columns>
    <columns>Status</columns>
    <columns>Cannot_Complete_Reason__c</columns>
    <columns>Line_of_Business__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Cannot Complete</value>
    </filters>
    <filters>
        <field>EndDate</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Cannot Complete (This Week)</label>
</ListView>